--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ Flask==1.1.1
 Flask-Login==0.5.0
 Flask-Session==0.3.1
 Flask-SQLAlchemy==2.4.1
+Flask-Testing==0.7.1
 Flask-WTF==0.14.3
 infinity==1.4
 intervals==0.8.1
