Set up circleci configuration

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,6 +48,7 @@ jobs:
           command: |
             . venv/bin/activate
             python -m unittest discover
+            coverage report
       - store_artifacts:
           path: test-reports
           destination: test-reports
