--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,42 @@
+attrs==19.3.0
+beautifulsoup4==4.8.2
+bs4==0.0.1
+certifi==2019.11.28
+chardet==3.0.4
 Click==7.0
 decorator==4.4.1
+dnspython==1.16.0
 Flask==1.1.1
 Flask-Login==0.4.1
 Flask-Session==0.3.1
 Flask-SQLAlchemy==2.4.0
 Flask-Testing==0.7.1
 Flask-WTF==0.14.2
+idna==2.9
+importlib-metadata==1.5.0
 infinity==1.4
 intervals==0.8.1
 itsdangerous==1.1.0
 Jinja2==2.10.1
 MarkupSafe==1.1.1
+more-itertools==8.2.0
+packaging==20.1
+pluggy==0.13.1
+protobuf==3.11.2
+py==1.8.1
+pyparsing==2.4.6
+pytest==5.3.5
+requests==2.23.0
 selenium==3.141.0
 six==1.14.0
+soupsieve==2.0
 SQLAlchemy==1.3.7
 SQLAlchemy-Utils==0.36.1
 urllib3==1.25.8
 validators==0.14.2
+wcwidth==0.1.8
 Werkzeug==0.15.5
 WTForms==2.2.1
 WTForms-Alchemy==0.16.9
 WTForms-Components==0.10.4
-dnspython==1.16.0
-protobuf==3.11.2
+zipp==3.1.0
