--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,9 @@ Click==7.0
 coverage==5.0.3
 decorator==4.4.1
 dnspython==1.16.0
+dominate==2.5.1
 Flask==1.1.1
+Flask-Bootstrap==3.3.7.1
 Flask-Login==0.4.1
 Flask-Session==0.3.1
 Flask-SQLAlchemy==2.4.0
@@ -35,6 +37,7 @@ SQLAlchemy==1.3.7
 SQLAlchemy-Utils==0.36.1
 urllib3==1.25.8
 validators==0.14.2
+visitor==0.1.3
 wcwidth==0.1.8
 Werkzeug==0.15.5
 WTForms==2.2.1
