--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,9 +9,9 @@ jobs:
       # specify the version you desire here
       # use `-browsers` prefix for selenium tests, e.g. `3.6.1-browsers`
       - image: circleci/python:3.7.4-stretch-browsers
-        environment:
-          FLASK_CONFIG: testing
-          TEST_DATABASE_URL: 'sqlite:///db/mealtime_testing.sqlite'
+#        environment:
+#          FLASK_CONFIG: testing
+#          TEST_DATABASE_URL: 'sqlite:///db/mealtime_testing.sqlite'
 
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
@@ -23,6 +23,7 @@ jobs:
     steps:
       - checkout
       - run: mkdir test-reports
+      - run: mkdir test-results
       - restore_cache:
           keys:
             - v1-dependencies-{{ checksum "requirements.txt" }}
