--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ beautifulsoup4==4.8.2
 bs4==0.0.1
 certifi==2019.11.28
 chardet==3.0.4
-Click==7.1.1
+click==7.1.1
 coverage==5.0.3
 decorator==4.4.2
 dnspython==1.16.0
@@ -15,6 +15,7 @@ Flask-Session==0.3.1
 Flask-SQLAlchemy==2.4.1
 Flask-Testing==0.8.0
 Flask-WTF==0.14.3
+gunicorn==20.0.4
 idna==2.9
 importlib-metadata==1.5.0
 infinity==1.4
@@ -29,6 +30,7 @@ protobuf==3.11.3
 py==1.8.1
 pyparsing==2.4.6
 pytest==5.3.5
+pytest-raisin==0.3
 requests==2.23.0
 selenium==3.141.0
 six==1.14.0
