--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ itsdangerous==1.1.0
 Jinja2==2.11.1
 MarkupSafe==1.1.1
 more-itertools==8.2.0
+mysql-connector-python==8.0.19
 packaging==20.3
 pluggy==0.13.1
 protobuf==3.11.3
