--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,13 @@
 # Check https://circleci.com/docs/2.0/language-python/ for more details
 #
 version: 2
+orbs:
+  heroku: circleci/heroku@0.0.10
+workflows:
+  heroku_deploy:
+    jobs:
+      - heroku/deploy-via-git
+
 jobs:
   build:
     docker:
