--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -73,10 +73,10 @@ jobs:
 #            cd app/
 #            git push heroku master
 
-orbs:
-  heroku: circleci/heroku@0.0.10
-workflows:
-  heroku_deploy:
-    jobs:
-      - heroku/deploy-via-git
+#orbs:
+#  heroku: circleci/heroku@0.0.10
+#workflows:
+#  heroku_deploy:
+#    jobs:
+#      - heroku/deploy-via-git
 
