--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+numpy
 attrs==19.3.0
 beautifulsoup4==4.8.2
 blinker==1.4
@@ -5,7 +6,7 @@ bs4==0.0.1
 certifi==2019.11.28
 chardet==3.0.4
 click==7.1.1
-coverage==5.0.3
+coverage==5.0.4
 decorator==4.4.2
 dnspython==1.16.0
 dominate==2.5.1
@@ -19,7 +20,7 @@ Flask-Testing==0.8.0
 Flask-WTF==0.14.3
 gunicorn==20.0.4
 idna==2.9
-importlib-metadata==1.5.0
+importlib-metadata==1.6.0
 infinity==1.4
 intervals==0.8.1
 itsdangerous==1.1.0
@@ -29,22 +30,22 @@ more-itertools==8.2.0
 mysql-connector-python==8.0.19
 packaging==20.3
 pluggy==0.13.1
-protobuf==3.6.1
+protobuf==3.11.3
 py==1.8.1
 PyJWT==1.7.1
 pyparsing==2.4.6
-pytest==5.3.5
+pytest==5.4.1
 pytest-raisin==0.3
 requests==2.23.0
 selenium==3.141.0
 six==1.14.0
 soupsieve==2.0
 SQLAlchemy==1.3.15
-SQLAlchemy-Utils==0.36.1
+SQLAlchemy-Utils==0.36.3
 urllib3==1.25.8
 validators==0.14.2
 visitor==0.1.3
-wcwidth==0.1.8
+wcwidth==0.1.9
 Werkzeug==1.0.0
 WTForms==2.2.1
 WTForms-Alchemy==0.16.9
