--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-numpy
+numpy==1.18.2
 attrs==19.3.0
 beautifulsoup4==4.8.2
 blinker==1.4
@@ -12,6 +12,7 @@ dnspython==1.16.0
 dominate==2.5.1
 Flask==1.1.1
 Flask-Bootstrap==3.3.7.1
+Flask-HTTPAuth==3.3.0
 Flask-Login==0.5.0
 Flask-Mail==0.9.1
 Flask-Session==0.3.1
