--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,7 +56,7 @@ jobs:
           name: run tests
           command: |
             . venv/bin/activate
-            python -m pytest test
+            python -m pytest test --ignore=test_browser.py
 #            pytest test/test_auth.py  # run test_auth only
 #            pytest test/test_main.py  # run test_main only
 
