--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,9 +56,8 @@ jobs:
           name: run tests
           command: |
             . venv/bin/activate
-#            python -m pytest test
+            python -m pytest test
 #            python3 -m pytest test/test_auth.py
-            py.test test/test_auth.py test/test_main.py
 #            pytest test/test_main.py  # run test_main only
 
       - store_test_results:
