--- a/requirements.txt
+++ b/requirements.txt
@@ -36,6 +36,8 @@ py==1.8.1
 PyJWT==1.7.1
 pyparsing==2.4.6
 pytest==5.4.1
+pytest-html==2.1.1
+pytest-metadata==1.8.0
 pytest-raisin==0.3
 requests==2.23.0
 selenium==3.141.0
