--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,26 @@ jobs:
     docker:
       # specify the version you desire here
       # use `-browsers` suffix for selenium tests, e.g. `3.6.1-browsers`
-      - image: circleci/python:3.7.4-stretch-browsers
+#      - image: circleci/python:3.7.4-stretch-browsers
+      - image: circleci/python:3.7.4-stretch-jessie-node-browsers
+    steps:
+      - checkout
+      - run:
+          name: Install Sauce Labs and Set Up Tunnel
+          background: true
+          command: |
+            curl https://saucelabs.com/downloads/sc-4.4.12-linux.tar.gz -o saucelabs.tar.gz
+            tar -xzf saucelabs.tar.gz
+            cd sc-*
+            bin/sc -u ${SAUCELABS_USER} -k ${SAUCELABS_KEY}
+            wget --retry-connrefused --no-check-certificate -T 60 localhost:4445  # wait for app to be ready
+      - run: # base image is python, so we run `nosetests`, an extension of `unittest`
+          command: nosetests
+      - run:
+          name: Shut Down Sauce Connect Tunnel
+          command: |
+            kill -9 `cat /tmp/sc_client.pid`
+
 #        environment:
 #          FLASK_CONFIG: testing
 #          TEST_DATABASE_URL: 'sqlite:///db/mealtime_testing.sqlite'
