--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,6 +17,9 @@ jobs:
       # use `-browsers` suffix for selenium tests, e.g. `3.6.1-browsers`
 #      - image: circleci/python:3.7.4-stretch-browsers
       - image: circleci/python:3.7.4-stretch-jessie-node-browsers
+
+    working_directory: ~/repo
+
     steps:
       - checkout
       - run:
@@ -44,9 +47,7 @@ jobs:
       # documented at https://circleci.com/docs/2.0/circleci-images/
       # - image: circleci/postgres:9.4
 
-    working_directory: ~/repo
-
-    steps:
+#    steps:
       - checkout
       - run: mkdir test-reports
       - run: mkdir test-results
