--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ jobs:
       # specify the version you desire here
       # use `-browsers` suffix for selenium tests, e.g. `3.6.1-browsers`
 #      - image: circleci/python:3.7.4-stretch-browsers
-      - image: circleci/python:3.7.4-jessie-node-browsers
+      - image: circleci/python:jessie-node-browsers
 
     working_directory: ~/repo
 
