--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,16 +10,7 @@
 
 version: 2
 
-orbs:
-  sauce-connect: saucelabs/sauce-connect@1.0.1
-
 jobs:
-  - sauce-connect/with_proxy:
-      name: Chrome Tests
-      steps:
-        - run: mvn verify -B -Dsauce.browser=chrome  -Dsauce.tunnel="chrome"
-      tunnel_identifier: chrome
-
   build:
     docker:
       # specify the version you desire here
@@ -33,6 +24,14 @@ jobs:
       - checkout
       - run:
           # Expose CircleCI container to Sauce Labs to connect to localhost url for browser testing
+
+          # The following code is adapted from CircleCI documentation.
+          #
+          # Title: Browser Testing - Sauce Labs
+          # Author: CircleCI
+          # Date: 2020
+          # Availability: https://circleci.com/docs/2.0/browser-testing/#sauce-labs
+          # Accessed: 8 April 2020
           name: Install Sauce Labs and Set Up Tunnel
           background: true
           command: |
@@ -40,7 +39,7 @@ jobs:
             tar -xzf saucelabs.tar.gz
             cd sc-*
             bin/sc -u ${SAUCELABS_USER} -k ${SAUCELABS_KEY}
-            wget --retry-connrefused --no-check-certificate -T 60 localhost:4445  # wait for app to be ready
+            wget --retry-connrefused --no-check-certificate -T 60 localhost:5000  # wait for app to be ready
 #      - run: # base image is python, so we run `nosetests`, an extension of `unittest`
 #          command: nosetests
 
