--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,7 +38,7 @@ jobs:
             curl https://saucelabs.com/downloads/sc-4.4.12-linux.tar.gz -o saucelabs.tar.gz
             tar -xzf saucelabs.tar.gz
             cd sc-*
-            bin/sc -u $justinattw -k $bb48374a-dc11-478a-88fa-64fd06ab831e
+            bin/sc -u justinattw -k bb48374a-dc11-478a-88fa-64fd06ab831e
             wget --retry-connrefused --no-check-certificate -T 60 localhost:5000  # wait for app to be ready
 #      - run: # base image is python, so we run `nosetests`, an extension of `unittest`
 #          command: nosetests
