Trying browser tests in circleci

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -84,7 +84,8 @@ jobs:
           name: run tests
           command: |
             . venv/bin/activate
-            python -m pytest test
+#            python -m pytest test
+            python -m pytest -k test.test_auth.py
 
       - store_test_results:
           path: test-results
