--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -86,7 +86,7 @@ jobs:
             . venv/bin/activate
 #            python -m pytest -v test/test_auth.py
 #            python -m pytest -v test/test_main.py
-            python -m pytest test -v test/test_browser.py
+            python -m pytest test -k test/test_browser.py
 #            python -m pytest test
 
 
