Trying browser tests in circleci

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -84,10 +84,10 @@ jobs:
           name: run tests
           command: |
             . venv/bin/activate
-#            python -m pytest -v test/test_auth.py
-#            python -m pytest -v test/test_main.py
-            python -m pytest test -k test/test_browser.py
 #            python -m pytest test
+            python -m pytest -v test/test_auth.py
+            python -m pytest -v test/test_main.py
+
 
 
       - store_test_results:
