--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,14 +32,14 @@ jobs:
           # Date: 2020
           # Availability: https://circleci.com/docs/2.0/browser-testing/#sauce-labs
           # Accessed: 8 April 2020
-          name: Install Sauce Labs and Set Up Tunnel
-          background: true
-          command: |
-            curl https://saucelabs.com/downloads/sc-4.5.4-linux.tar.gz -o saucelabs.tar.gz
-            tar -xzf saucelabs.tar.gz
-            cd sc-*
-            bin/sc -u justinattw -k bb48374a-dc11-478a-88fa-64fd06ab831e
-            wget --retry-connrefused --no-check-certificate -T 60 localhost:5000
+#          name: Install Sauce Labs and Set Up Tunnel
+#          background: true
+#          command: |
+#            curl https://saucelabs.com/downloads/sc-4.5.4-linux.tar.gz -o saucelabs.tar.gz
+#            tar -xzf saucelabs.tar.gz
+#            cd sc-*
+#            bin/sc -u justinattw -k bb48374a-dc11-478a-88fa-64fd06ab831e
+#            wget --retry-connrefused --no-check-certificate -T 60 localhost:5000
           # wait for app to be ready
 
 #        environment:
@@ -84,7 +84,8 @@ jobs:
           name: run tests
           command: |
             . venv/bin/activate
-            python -m pytest test --ignore test/test_browser.py
+            python -m pytest test
+#            python -m pytest test --ignore test/test_browser.py
 #            python -m pytest -v test/test_auth.py
 #            python -m pytest -v test/test_main.py
 
