--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,15 @@
 attrs==19.3.0
-beautifulsoup4==4.9.0
+beautifulsoup4==4.8.2
 blinker==1.4
 bs4==0.0.1
-certifi==2020.4.5.1
+certifi==2019.11.28
 chardet==3.0.4
 click==7.1.1
 coverage==5.0.4
 decorator==4.4.2
 dnspython==1.16.0
 dominate==2.5.1
-Flask==1.1.2
+Flask==1.1.1
 Flask-Bootstrap==3.3.7.1
 Flask-HTTPAuth==3.3.0
 Flask-Login==0.5.0
@@ -34,8 +34,9 @@ pluggy==0.13.1
 protobuf==3.11.3
 py==1.8.1
 PyJWT==1.7.1
-pyparsing==2.4.7
+pyparsing==2.4.6
 pytest==5.4.1
+pytest-flask==1.0.0
 pytest-html==2.1.1
 pytest-metadata==1.8.0
 pytest-raisin==0.3
@@ -43,13 +44,13 @@ requests==2.23.0
 selenium==3.141.0
 six==1.14.0
 soupsieve==2.0
-SQLAlchemy==1.3.16
+SQLAlchemy==1.3.15
 SQLAlchemy-Utils==0.36.3
 urllib3==1.25.8
-validators==0.14.3
+validators==0.14.2
 visitor==0.1.3
 wcwidth==0.1.9
-Werkzeug==1.0.1
+Werkzeug==1.0.0
 WTForms==2.2.1
 WTForms-Alchemy==0.16.9
 WTForms-Components==0.10.4
