--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,33 +22,26 @@ jobs:
 
     steps:
       - checkout
-#      - run:
-#          # Expose CircleCI container to Sauce Labs to connect to localhost url for browser testing
-#
-#          # The following code is adapted from CircleCI documentation.
-#          #
-#          # Title: Browser Testing - Sauce Labs
-#          # Author: CircleCI
-#          # Date: 2020
-#          # Availability: https://circleci.com/docs/2.0/browser-testing/#sauce-labs
-#          # Accessed: 8 April 2020
-#          name: Install Sauce Labs and Set Up Tunnel
-#          background: true
-#          command: |
-#            curl https://saucelabs.com/downloads/sc-4.5.4-linux.tar.gz -o saucelabs.tar.gz
-#            tar -xzf saucelabs.tar.gz
-#            cd sc-*
-#            bin/sc -u justinattw -k bb48374a-dc11-478a-88fa-64fd06ab831e
-#            wget --retry-connrefused --no-check-certificate -T 60 localhost:5000
+      - run:
+          # Expose CircleCI container to Sauce Labs to connect to localhost url for browser testing
 
+          # The following code is adapted from CircleCI documentation.
+          #
+          # Title: Browser Testing - Sauce Labs
+          # Author: CircleCI
+          # Date: 2020
+          # Availability: https://circleci.com/docs/2.0/browser-testing/#sauce-labs
+          # Accessed: 8 April 2020
+          name: Install Sauce Labs and Set Up Tunnel
+          background: true
+          command: |
+            curl https://saucelabs.com/downloads/sc-4.5.4-linux.tar.gz -o saucelabs.tar.gz
+            tar -xzf saucelabs.tar.gz
+            cd sc-*
+            bin/sc -u justinattw -k bb48374a-dc11-478a-88fa-64fd06ab831e
+            wget --retry-connrefused --no-check-certificate -T 60 localhost:5000
           # wait for app to be ready
 
-#        environment:
-#          FLASK_CONFIG: testing
-#          TEST_DATABASE_URL: 'sqlite:///db/mealtime_testing.sqlite'
-
-
-#      - checkout
       - run: mkdir test-reports
       - run: mkdir test-results
       - restore_cache:
@@ -69,18 +62,12 @@ jobs:
           name: Download Selenium
           command: curl -O http://selenium-release.storage.googleapis.com/3.5/selenium-server-standalone-3.5.3.jar
 
-#      - run:
-#          name: Start Selenium
-#          command: java -jar selenium-server-standalone-3.5.3.jar -log test-reports/selenium.log
-#          background: true
-
       - save_cache:
           paths:
             - ./venv
           key: v1-dependencies-{{ checksum "requirements.txt" }}
 
       # https://pytest.org
-      # https://nose.readthedocs.io
       - run:
           name: run tests
           command: |
