--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,24 +22,24 @@ jobs:
 
     steps:
       - checkout
-      - run:
-          # Expose CircleCI container to Sauce Labs to connect to localhost url for browser testing
-
-          # The following code is adapted from CircleCI documentation.
-          #
-          # Title: Browser Testing - Sauce Labs
-          # Author: CircleCI
-          # Date: 2020
-          # Availability: https://circleci.com/docs/2.0/browser-testing/#sauce-labs
-          # Accessed: 8 April 2020
-          name: Install Sauce Labs and Set Up Tunnel
-          background: true
-          command: |
-            curl https://saucelabs.com/downloads/sc-4.5.4-linux.tar.gz -o saucelabs.tar.gz
-            tar -xzf saucelabs.tar.gz
-            cd sc-*
-            bin/sc -u justinattw -k bb48374a-dc11-478a-88fa-64fd06ab831e
-            wget --retry-connrefused --no-check-certificate -T 60 localhost:5000
+#      - run:
+#          # Expose CircleCI container to Sauce Labs to connect to localhost url for browser testing
+#
+#          # The following code is adapted from CircleCI documentation.
+#          #
+#          # Title: Browser Testing - Sauce Labs
+#          # Author: CircleCI
+#          # Date: 2020
+#          # Availability: https://circleci.com/docs/2.0/browser-testing/#sauce-labs
+#          # Accessed: 8 April 2020
+#          name: Install Sauce Labs and Set Up Tunnel
+#          background: true
+#          command: |
+#            curl https://saucelabs.com/downloads/sc-4.5.4-linux.tar.gz -o saucelabs.tar.gz
+#            tar -xzf saucelabs.tar.gz
+#            cd sc-*
+#            bin/sc -u justinattw -k bb48374a-dc11-478a-88fa-64fd06ab831e
+#            wget --retry-connrefused --no-check-certificate -T 60 localhost:5000
           # wait for app to be ready
 
       - run: mkdir test-reports
@@ -87,7 +87,7 @@ jobs:
           path: test-reports
           destination: test-reports
 
-      - run:
-          name: Shut Down Sauce Connect Tunnel
-          command: |
-            kill -9 `cat /tmp/sc_client.pid`
+#      - run:
+#          name: Shut Down Sauce Connect Tunnel
+#          command: |
+#            kill -9 `cat /tmp/sc_client.pid`
