Trying circleci coverage

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -72,9 +72,7 @@ jobs:
           name: run tests
           command: |
             . venv/bin/activate
-            coverage pytest test
-            coverage report
-#            python -m pytest test
+            python -m pytest test
 #            python -m pytest test --ignore test/test_browser.py
 #            python -m pytest -v test/test_auth.py
 #            python -m pytest -v test/test_main.py
